Amazon EKS on AWS Fargate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budionosaneks
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: budionosaneks
  type: LoadBalancer
